[package]
name = "ballPhysics_rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = "0.14.2"
bevy_prototype_lyon = "0.12.0"
rand = "0.8.5"

